; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_dc21285.c_dc21285_copy_to_16.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/maps/extr_dc21285.c_dc21285_copy_to_16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map_info = type { i32 }
%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.map_info*, i64, i8*, i64)* @dc21285_copy_to_16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dc21285_copy_to_16(%struct.map_info* %0, i64 %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.map_info*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca %struct.TYPE_3__, align 8
  store %struct.map_info* %0, %struct.map_info** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  br label %10

10:                                               ; preds = %13, %4
  %11 = load i64, i64* %8, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %31

13:                                               ; preds = %10
  %14 = load i8*, i8** %7, align 8
  %15 = bitcast i8* %14 to i32*
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = getelementptr inbounds i32, i32* %18, i64 0
  store i32 %16, i32* %19, align 4
  %20 = load %struct.map_info*, %struct.map_info** %5, align 8
  %21 = load i64, i64* %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = call i32 @dc21285_write16(%struct.map_info* %20, i32* %23, i64 %21)
  %25 = load i8*, i8** %7, align 8
  %26 = getelementptr i8, i8* %25, i64 2
  store i8* %26, i8** %7, align 8
  %27 = load i64, i64* %6, align 8
  %28 = add i64 %27, 2
  store i64 %28, i64* %6, align 8
  %29 = load i64, i64* %8, align 8
  %30 = sub nsw i64 %29, 2
  store i64 %30, i64* %8, align 8
  br label %10

31:                                               ; preds = %10
  ret void
}

declare dso_local i32 @dc21285_write16(%struct.map_info*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
